--- a/static/style.css
+++ b/static/style.css
@@ -108,6 +108,35 @@ p[style*="color: red;"] {
     text-align: center;
     line-height: 1.2;
 }
+
+.tooltip {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+}
+
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: #fff;
+    color: #555;
+    text-align: center;
+    border-radius: 5px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -60px;
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
+}
+
 .navbar {
     max-width: 600px;
     margin: 0 auto 10px;
@@ -122,7 +151,6 @@ p[style*="color: red;"] {
 .navbar img {
     width: 32px;
     height: 32px;
-    border-radius: 50%;
     margin-bottom: 4px;
 }
 
